table creation and deletion done.  Attribute posting by PUTting link to CSV as dataurl param.

--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -15,6 +15,9 @@
 <% end %>
 </table>
 
+<h2>Tables in Remote Database</h2>
+<p><%= Dataset.get_domain_list_string %></p>
+
 <br />
 
 <%= link_to 'New dataset', new_dataset_path %>
