machine learning hooked up with database.  However, SDB can't take >1024 byte values.

--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -15,7 +15,8 @@
 <%= link_to 'Back', datasets_path %>
 <p><%= form_tag(dataset_path, :method => "put") %>
     URL of Data to Add<%= text_field_tag 'dataurl' %>
-    <%= submit_tag 'Add Data' %>
+    Service to Use (supported: calais)<%= text_field_tag 'service' %>
+    <%= submit_tag 'Add Data and/or run Machine Learning' %>
 </p>
 
 
