1.  Changed user-settable uid to a uuid generated automatically on creation.  Now, the Rails id is the primary key rather than the uid (because that caused problems to Heroku). 2.  Modularized cucumber step definitions. 3.  created test controller so that cucumber/webrat can see files since they can't access /public easily.

--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -2,12 +2,12 @@
 
 <table>
   <tr>
-    <th>Uid</th>
+    <th>Client UUID</th>
   </tr>
 
 <% @datasets.each do |dataset| %>
   <tr>
-    <td><%=h dataset.uid %></td>
+    <td><%=h dataset.client_uuid %></td>
     <td><%= link_to 'Show', dataset %></td>
     <td><%= link_to 'Destroy', dataset, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
