--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -1,6 +1,6 @@
 <p>
-  <b>Uid:</b>
-  <%=h @dataset.uid %>
+  <b>Client UUID:</b>
+  <%=h @dataset.client_uuid %>
 </p>
 
 <h2>Is the service still learning?</h2>
