added administrative cleanup ability that can delete remote tables easily

--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -17,6 +17,10 @@
 <h2>Tables in Remote Database</h2>
 <p><%= Dataset.get_domain_list_string %></p>
 
-<br />
+<p><%= form_tag(cleanup_datasets_path, :method => "delete") %>
+  Client UUID That Needs Its Tables Deleted <%= text_field_tag 'table_to_remove' %><br />
+  <%= submit_tag 'Delete' %>
+</p>
 
+<br />
 <%= link_to 'New dataset', new_dataset_path %>
