--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -7,8 +7,8 @@
 <p><%= @dataset.is_learning? %></p>
 
 <h2>Attributes</h2>
-<% @dataset.get_database_as_map.each do |key, val| %>
-	<p><%= [key, val].inspect %></p>
+<% @dataset.database_table.as_map.each do |key, val| %>
+  <p><%= [key, val].inspect %></p>
 <% end %>
 
 <%= link_to 'Destroy', @dataset, :confirm => 'Are you sure?', :method => :delete %></td>
