--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing datasets for user: <%= current_user.login %></h1>
+<h1>Listing datasets for user: <%= current_user.login %> (id: <%= current_user.id %>)</h1>
 
 <table>
   <tr>
