--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -1,6 +1,7 @@
 <p>
-  <b>Table UUID:</b>
-  <%=h @dataset.table_uuid %>
+  <b>Table</b>
+  <p>ID: <%=h @dataset.table_uuid %></p>
+  <p>Name: <%=h @dataset.name %></p>
 </p>
 
 <h2>Is the service still learning?</h2>
