--- a/app/views/datasets/new.html.erb
+++ b/app/views/datasets/new.html.erb
@@ -4,6 +4,10 @@
   <%= f.error_messages %>
 
   <p>
+    <%= f.label :table_name %><br />
+    <%= f.text_field :name %>
+  </p>
+  <p>
     <%= f.submit 'Create' %>
   </p>
 <% end %>
